# preflight-ai

./: .gitignore  README.md  SPEC.md  main.py  pyproject.toml  requirements.txt  setup.py
ai/: __init__.py  answer_analyzer.py  file_generator.py  idea_parser.py  provider.py  question_engine.py
builders/: __init__.py  claude_builder.py  gemini_builder.py  preflight_builder.py
core/: __init__.py  compressor.py  constants.py  spec_builder.py  token_counter.py
memory/: __init__.py  context_finder.py  file_indexer.py  memory_manager.py  memory_updater.py
modes/: __init__.py  change_mode.py  setup_mode.py
templates/claude/: CLAUDE.md.tmpl  agents.tmpl  mcp.json.tmpl  settings.json.tmpl  skills.tmpl
templates/claude/rules/: backend.tmpl  code-style.tmpl  database.tmpl  frontend.tmpl  testing.tmpl
templates/gemini/: GEMINI.md.tmpl  settings.json.tmpl
tests/: test_answer_analyzer.py  test_compressor.py  test_context_finder.py  test_file_indexer.py  test_idea_parser.py  test_integration.py  test_memory_manager.py  test_question_engine.py  test_token_counter.py
